--- a/myforum/forum/templates/header.html
+++ b/myforum/forum/templates/header.html
@@ -13,6 +13,8 @@
         <a href="{% url 'add_post' %}" class="nav-link add-post-link"
           >Add Post</a
         >
+        <a href="{% url 'upload' %}" class="nav-link add-post-link">
+          Upload File</a>
         <form method="post" action="{% url 'logout' %}">
           {% csrf_token %}
           <button type="submit" class="nav-button logout-button">Logout</button>
