--- a/myforum/forum/templates/upload.html
+++ b/myforum/forum/templates/upload.html
@@ -13,7 +13,7 @@
       <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type="file" name="document">
-        <button type="submit">Upload file</button>
+        <button type="submit" class="upload">Upload file</button>
     </form>
     {% if url %}
     <p>Uploaded file: <a href="{{ url }}">{{ url }}</a></p>
