--- a/myforum/forum/static/upload.css
+++ b/myforum/forum/static/upload.css
@@ -59,3 +59,23 @@ p {
     text-align: center;
     margin-top: 20px;
 }
+.back-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background-color 0.2s;
+  }
+  
+  .back-button:hover {
+    background-color: #0056b3;
+    color: #fff;
+  }
+  
+  .back-button:active {
+    background-color: #003d80;
+  }
+  
