--- a/myforum/forum/templates/view_files.html
+++ b/myforum/forum/templates/view_files.html
@@ -1,21 +1,23 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-    {% include 'header.html' %}
-<head>
+  {% include 'header.html' %}
+  <head>
     <title>Uploaded Files</title>
     <link rel="stylesheet" href="{% static 'upload.css' %}" />
-</head>
-<body>
+  </head>
+  <body>
     <h1>Uploaded Files</h1>
-    {% if user.is_authenticated %}
+    {% if user.is_authenticated %} {% if uploaded_files %}
     <ul>
-        {% for file_name in uploaded_files %}
-            <li><a href="{{ MEDIA_URL }}{{ file_name }}">{{ file_name }}</a></li>
-        {% endfor %}
+      {% for file_name in uploaded_files %}
+      <li><a href="{{ MEDIA_URL }}{{ file_name }}">{{ file_name }}</a></li>
+      {% endfor %}
     </ul>
     {% else %}
-    You need to <a href="{% url 'login' %}" class="have-account-link">login.</a>
+    <p>No files uploaded yet.</p>
+    {% endif %} {% else %} You need to
+    <a href="{% url 'login' %}" class="have-account-link">login.</a>
     {% endif %}
-</body>
+  </body>
 </html>
