--- a/myforum/forum/static/posts.css
+++ b/myforum/forum/static/posts.css
@@ -1,118 +1,213 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
-    overflow-y: scroll;
-  }
-  
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .posts {
-    padding: 20px;
-  }
-  
-  .post-section {
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #000000;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-  }
-  
-  .post-title {
-    font-size: 20px;
-    font-weight: bold;
-    color: #333;
-  }
-  
-  .post-content {
-    font-size: 16px;
-    color: #666;
-  }
-  
-  .post-author {
-    color: #888;
-  }
-  
-  .divider {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-top: 1px solid #ccc;
-  }
-  
-  .comments-section {
-    margin-top: 10px;
-  }
-  
-  .comment {
-    margin-bottom: 5px;
-  }
-  
-  .add-comment-form {
-    margin-top: 10px;
-  }
-  
-  button.add-comment {
-    padding: 5px 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  button.add-comment:hover {
-    background-color: #0056b3;
-  }
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Use a better font style */
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
+}
 
-  ul {
-    list-style: none; 
-  }
-  
-  .posts ul {
-    padding: 0;
-    margin: 0;
-  }
-  .divider {
-    border-top: 1px solid #ccc; /* Style for the divider */
-    margin: 20px 0; /* Adjust margin as needed */
-  }
-  
-  ::-webkit-scrollbar {
-    width: 0; /* Hide scrollbar for Chrome, Safari, and Opera */
-  }
-  
-  ::-webkit-scrollbar-track {
-    background: transparent; /* Hide scrollbar track */
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    background: transparent; /* Hide scrollbar thumb */
-  }
+h1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
 
-  .download-pdf {
-    text-align: center; /* Center the download button container */
-    margin: 20px 0; /* Add some space around the container */
-  }
-  
-  .download-pdf-button {
-    background-color: #007bff; /* Bootstrap primary blue */
-    color: white;
-    padding: 10px 15px;
-    text-decoration: none;
-    font-size: 16px;
-    border-radius: 5px;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  }
-  
-  .download-pdf-button:hover, .download-pdf-button:focus {
-    background-color: #0056b3; /* A slightly darker blue on hover/focus */
-    color: white;
-    outline: none;
-  }
+.posts {
+  padding: 20px;
+}
+
+.post-section {
+  margin-bottom: 20px;
+  padding: 10px;
+  border: 2px solid #007bff;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+
+.post-title {
+  font-size: 40px;
+  font-weight: bold;
+  color: #333;
+}
+
+.section-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: gray;
+  padding-bottom: 5px;
+  font-size: 14px;
+}
+
+.post-content {
+  font-size: 16px;
+  color: #666;
+  /* Set maximum width for the post content */
+  max-width: 100%;
+  /* Enable word wrapping */
+  word-wrap: break-word;
+  /* Prevent overflow */
+  overflow-wrap: break-word;
+}
+
+.post-author {
+  color: #888;
+}
+
+.divider {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-top: 1px solid #ccc;
+}
+
+.comments-section {
+  margin-top: 10px;
+}
+
+.comment {
+  margin-bottom: 5px;
+}
+
+.add-comment-form {
+  margin-top: 10px;
+}
+
+button.add-comment {
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button.add-comment:hover {
+  background-color: #0056b3;
+}
+
+ul {
+  list-style: none;
+}
+
+.posts ul {
+  padding: 0;
+  margin: 0;
+}
+.divider {
+  border-top: 1px solid #ccc; /* Style for the divider */
+  margin: 20px 0; /* Adjust margin as needed */
+}
+
+::-webkit-scrollbar {
+  width: 0; /* Hide scrollbar for Chrome, Safari, and Opera */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Hide scrollbar track */
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent; /* Hide scrollbar thumb */
+}
+
+.download-pdf {
+  text-align: center; /* Center the download button container */
+  margin: 20px 0; /* Add some space around the container */
+}
+
+.download-pdf-button {
+  background-color: #007bff; /* Bootstrap primary blue */
+  color: white;
+  padding: 10px 15px;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.download-pdf-button:hover,
+.download-pdf-button:focus {
+  background-color: #0056b3; /* A slightly darker blue on hover/focus */
+  color: white;
+  outline: none;
+}
+
+.pagination {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.pagination a,
+.pagination span {
+  display: inline-block;
+  padding: 8px 16px;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #007bff;
+  border: 1px solid #007bff;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+.pagination a:hover {
+  background-color: #0056b3;
+  border-color: #0056b3;
+}
+.pagination .current {
+  font-weight: bold;
+  background-color: #0056b3;
+  border-color: #0056b3;
+}
+.pagination .disabled {
+  pointer-events: none;
+  background-color: #f2f2f2;
+  color: #bfbfbf;
+  border-color: #f2f2f2;
+}
+
+/* posts.css */
+.posts-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.posts-table th,
+.posts-table td {
+  padding: 8px;
+  border: 1px solid #ddd;
+  word-wrap: break-word; /* Enable text wrapping */
+  max-width: 300px; /* Limit the maximum width of table cells */
+  overflow: hidden;
+  text-overflow: ellipsis; /* Add ellipsis for overflowed text */
+}
+
+.posts-table th {
+  background-color: #f2f2f2;
+}
+
+.posts-table tbody tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.posts-table tbody tr:hover {
+  background-color: #ddd;
+}
+
+.section-title {
+  top: -20px; /* Adjust as needed */
+  left: 8px;
+  padding: 0 4px;
+  font-weight: bold;
+  text-transform: uppercase;
+  justify-content: left;
+  display: flex;
+}
+
+.cell-item {
+  background-color: #888;
+}
+
+.section-content {
+  padding-left: 20%;
+
+  align-items: justify;
+}
