--- a/myforum/forum/static/upload.css
+++ b/myforum/forum/static/upload.css
@@ -1,4 +1,3 @@
-/* upload.css */
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f8f9fa;
@@ -68,14 +67,20 @@ p {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.2s;
-  }
-  
-  .back-button:hover {
+    display: block; /* Change from inline-block to block */
+    text-decoration: none;
+    width: 100%; /* Set the width to 100% */
+}
+
+.back-button:hover {
     background-color: #0056b3;
-    color: #fff;
-  }
-  
-  .back-button:active {
+    color: white;
+}
+
+.back-button:active {
     background-color: #003d80;
-  }
-  
+}
+
+.back-button:focus {
+    outline: none;
+}
