--- a/myforum/forum/static/posts.css
+++ b/myforum/forum/static/posts.css
@@ -1,6 +1,6 @@
 /* Reset CSS */
 body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Arial", sans-serif;
   background-color: #f5f5f5;
   margin: 0;
   padding: 0;
